--- a/app/src/main/res/layout/activity_configuracao.xml
+++ b/app/src/main/res/layout/activity_configuracao.xml
@@ -7,76 +7,113 @@
     android:background="#FFFFFF"
     tools:context=".activity.ConfiguracaoActivity">
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="360dp"
-        android:layout_height="wrap_content"
+
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/constraintLayout"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_margin="5dp"
-        app:cardBackgroundColor="@color/corFundoCard"
-        app:cardCornerRadius="8dp"
-        app:cardElevation="10dp"
-        app:cardMaxElevation="10dp"
-        app:cardPreventCornerOverlap="true"
-        app:cardUseCompatPadding="true"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.5"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.07">
+        android:background="@color/white"
+        android:paddingBottom="16dp"
+        tools:layout_editor_absoluteX="29dp"
+        tools:layout_editor_absoluteY="73dp">
 
-        <androidx.constraintlayout.widget.ConstraintLayout
-            android:layout_width="367dp"
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewExercicio"
+            android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@color/corFundoCard"
-            android:paddingBottom="16dp">
-
-            <Switch
-                android:id="@+id/swtLembreteSono"
-                android:layout_width="233dp"
-                android:layout_height="32dp"
-                android:layout_marginTop="16dp"
-                android:text="Lembrete sono"
-                android:theme="@style/SwitchStyle"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
+            android:layout_margin="5dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintTop_toTopOf="parent"
+            tools:layout_editor_absoluteX="0dp">
 
             <Switch
                 android:id="@+id/swtLembreteExercicio"
-                android:layout_width="233dp"
+                android:layout_width="match_parent"
                 android:layout_height="32dp"
-                android:layout_marginTop="16dp"
+                android:layout_margin="10dp"
                 android:text="Lembrete exercício"
                 android:theme="@style/SwitchStyle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/swtLembreteSono" />
 
+        </androidx.cardview.widget.CardView>
+
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewRemedio"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintTop_toBottomOf="@+id/cardViewExercicio"
+            tools:layout_editor_absoluteX="0dp">
+
             <Switch
                 android:id="@+id/swtLembreteRemedio"
-                android:layout_width="233dp"
+                android:layout_width="match_parent"
                 android:layout_height="32dp"
-                android:layout_marginTop="16dp"
+                android:layout_margin="10dp"
                 android:text="Lembrete remédio"
                 android:theme="@style/SwitchStyle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/swtLembreteExercicio" />
+        </androidx.cardview.widget.CardView>
+
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewBebida"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="8dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintTop_toBottomOf="@+id/cardViewRemedio"
+            tools:layout_editor_absoluteX="0dp">
 
             <Switch
                 android:id="@+id/swtLembreteBebida"
-                android:layout_width="233dp"
+                android:layout_width="match_parent"
                 android:layout_height="32dp"
-                android:layout_marginTop="16dp"
-                android:layout_marginBottom="16dp"
+                android:layout_margin="10dp"
                 android:text="Lembrete bebida"
                 android:theme="@style/SwitchStyle"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/swtLembreteRemedio" />
+        </androidx.cardview.widget.CardView>
 
-        </androidx.constraintlayout.widget.ConstraintLayout>
+        <androidx.cardview.widget.CardView
+            android:id="@+id/cardViewLembreteSono"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_margin="5dp"
+            android:layout_marginTop="4dp"
+            app:cardBackgroundColor="@color/white"
+            app:cardPreventCornerOverlap="true"
+            app:cardUseCompatPadding="true"
+            app:layout_constraintTop_toBottomOf="@+id/cardViewBebida">
+            <Switch
+                android:id="@+id/swtLembreteSono"
+                android:layout_width="match_parent"
+                android:layout_height="32dp"
+                android:layout_margin="10dp"
+                android:text="Lembrete sono"
+                android:theme="@style/SwitchStyle"
+                tools:layout_editor_absoluteX=""
+                tools:layout_editor_absoluteY="245dp" />
+        </androidx.cardview.widget.CardView>
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </androidx.cardview.widget.CardView>
+
+
 
 </androidx.constraintlayout.widget.ConstraintLayout>
